--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 
 [dependencies]
 clap = "2.33.3"
+
+[dev-dependencies]
+assert_cmd = "1.0.3"
+assert_fs = "1.0.1"
+predicates = "1.0.7"
